DuPont DevSB/src/objects/Site_Content__c.object
<CustomObject>
    <fields>
        <fullName>Application__c</fullName>
        <description>A picklist field to select the application for which the record is being created or updated</description>
        <label>Application</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Column_Number__c</fullName>
        <description>Stores the column location for the content vs. other content on the page. For example, which column to position a news article.</description>
        <inlineHelpText>Column number on the page layout</inlineHelpText>
        <label>Column Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contact_Category__c</fullName>
        <description>Contact classification listed on Contact Page on a Site.</description>
        <label>Contact Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>General Questions</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Subject Matter Experts(SME)</fullName>
                </value>
                <value>
                    <fullName>Competency Leader</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To store reference UserName from Users object</description>
        <label>SME Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Site_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Full_text2_rtf__c</fullName>
        <description>Rich Text Area that contains the secondary information for the content. For example, details about Course schedule, location and dates.</description>
        <label>Full_text2__rtf</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Full_text__c</fullName>
        <description>Rich Text Area that contains the main text area for the content. For example, text of news article, text of process step page, or curricula details.</description>
        <inlineHelpText>Detailed description of news/stage/step</inlineHelpText>
        <label>Full text</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ImageId__c</fullName>
        <description>Image id field to store the id of the image stored in content management</description>
        <label>Image Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <description>Rich Text Area that contains any images related to a particular section of Visualforce page</description>
        <label>Image</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legacy_One_DuPont_SFID__c</fullName>
        <description>This field is populated with the legacy One DuPont SF ID and was used during the split to map related records during the split and insert process to maintain the migrated record’s parent child record relationships.</description>
        <externalId>true</externalId>
        <inlineHelpText>This is the pre-split original 18 digit Salesforce ID of this record that came from the original One Dupont Salesforce instance before the business units were separated.  Its is case insensitive and unique.</inlineHelpText>
        <label>Legacy One DuPont SFID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Link__c</fullName>
        <description>To store a hyperlink that would point to the detail page of a News article / Stage Detail / Step detail</description>
        <label>Link</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Parent_Name__c</fullName>
        <description>Formula for parent look up.</description>
        <formula>Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Self-referencing lookup to establish parent/child relationships for the page or between pages. For example, linking a process step to the stage to which it belongs.</description>
        <label>Parent</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND ((2 AND 3) OR (4 AND 5)))</booleanFilter>
            <filterItems>
                <field>Site_Content__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Site_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>01230000000qqi5</value>
            </filterItems>
            <filterItems>
                <field>$Source.Application__c</field>
                <operation>equals</operation>
                <value>DMX online</value>
            </filterItems>
            <filterItems>
                <field>$Source.Application__c</field>
                <operation>equals</operation>
                <value>Sales Excellence</value>
            </filterItems>
            <filterItems>
                <field>Site_Content__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>01230000000sgLd</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Site_Content__c</referenceTo>
        <relationshipLabel>Site Content</relationshipLabel>
        <relationshipName>Site_Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Row_Number__c</fullName>
        <description>Stores the row location for the content vs. other content on the page. For example, which row to position a news article.</description>
        <inlineHelpText>Row number on the page layout</inlineHelpText>
        <label>Row Number</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seq_Number__c</fullName>
        <description>To indicate the sequence for News, Stages, Steps etc which will have multiple ACTIVE entries in the Site Page object</description>
        <inlineHelpText>Stages/Steps sequence number</inlineHelpText>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Desc__c</fullName>
        <description>Text Area that contains the short description (1 to 2 lines) of News Articles / Stages / Steps / Curricula Details / FAQ questions</description>
        <label>Short Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Set the record status to active/inactive</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Inactive</fullName>
                    <default>true</default>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tags1__c</fullName>
        <description>Stores tag values for to a page used to retrieve related information or similar purposes. For example: store tags to select Excel tools from SFDC Content module that are related to the page.</description>
        <formula>(IF(ISPickVal(Application__c,&apos;DMX online&apos;),IF((Parent__c==null), &apos;Stage &apos; &amp; Text(FLOOR(Seq_Number__c)) , &apos;Step &apos; &amp; Text(Parent__r.Seq_Number__c) &amp; &apos;.&apos; &amp;Text(Seq_Number__c)),IF((ISPickVal(Application__c,&apos;Sales Excellence&apos;)&amp;&amp;( $RecordType.DeveloperName =&apos;COE_Detail&apos; || ($RecordType.DeveloperName =&apos;SEO_SSP_Overview&apos; &amp;&amp; ISPICKVAL(Type__c, &apos;SSP Overview&apos;) ) || $RecordType.DeveloperName =&apos;Course&apos;)), Name,&apos; &apos;)))</formula>
        <label>Tags</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type picklist value used to differentiate where exactly the site content details are being used.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ZZ - Field Not Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Videoid__c</fullName>
        <description>For  Video  From Content Management.</description>
        <label>Video id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Site Content</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>CS_ALL</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Site_Content__c.CS_Notification_Banner</value>
        </filters>
        <label>CS: ALL</label>
        <language>en_US</language>
        <sharedTo>
            <group>CS_CenterIndia</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Header</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Site Content</pluralLabel>
    <recordTypes>
        <fullName>CS_Notification_Banner</fullName>
        <active>false</active>
        <description>This record type is used for notification banner</description>
        <label>CS Notification Banner</label>
    </recordTypes>
    <recordTypes>
        <fullName>Contact_Us</fullName>
        <active>false</active>
        <description>The subject and subject matter expert name &amp; email</description>
        <label>Contact Us</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course</fullName>
        <active>false</active>
        <description>Used to capture High Level Course information</description>
        <label>Course</label>
    </recordTypes>
    <recordTypes>
        <fullName>Course_Detail</fullName>
        <active>false</active>
        <description>Used to capture details of the courses offered.</description>
        <label>Course Detail</label>
    </recordTypes>
    <recordTypes>
        <fullName>Curricula</fullName>
        <active>false</active>
        <description>Currricula information and the related links.</description>
        <label>Curricula</label>
    </recordTypes>
    <recordTypes>
        <fullName>Left_Navigation</fullName>
        <active>false</active>
        <description>Welcome Note in the left navigation panel.</description>
        <label>Left Navigation</label>
    </recordTypes>
    <recordTypes>
        <fullName>News</fullName>
        <active>true</active>
        <description>Captures News relevent information Header, Description,Image, Full text, Status Row &amp; Column number.</description>
        <label>News</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Both_imageID_Image</fullName>
        <active>true</active>
        <description>Both Image and Image id can not be entered</description>
        <errorConditionFormula>( $RecordType.Name =&apos;News&apos; &amp;&amp;  ImageId__c  != &apos;&apos;  &amp;&amp;    LEN(Image__c) !=0)</errorConditionFormula>
        <errorMessage>Both Image and Image id can not be entered</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ColNumber_Greater_2_News</fullName>
        <active>true</active>
        <description>Column Number can not be greater than 2</description>
        <errorConditionFormula>( $RecordType.Name =&apos;News&apos; &amp;&amp;  Column_Number__c  &gt; 2)</errorConditionFormula>
        <errorDisplayField>Column_Number__c</errorDisplayField>
        <errorMessage>Column Number can not be greater than 2</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ColNumber_Not_Null</fullName>
        <active>true</active>
        <description>Column Number can not be null.</description>
        <errorConditionFormula>( $RecordType.Name =&apos;News&apos; &amp;&amp; text (Column_Number__c) = &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Column_Number__c</errorDisplayField>
        <errorMessage>Column Number can not  be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Imageid_or_image_News</fullName>
        <active>true</active>
        <errorConditionFormula>( $RecordType.Name =&apos;News&apos; &amp;&amp;  ImageId__c = &apos;&apos;  &amp;&amp;  Image__c = &apos;&apos;)</errorConditionFormula>
        <errorMessage>Either ImageId OR Image should be entered.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Parent_not_null_in_sme_ContactUs</fullName>
        <active>true</active>
        <description>Parent Lookup can&apos;t be null on SME selection.</description>
        <errorConditionFormula>( $RecordType.Name = &apos;Contact Us&apos; &amp;&amp;  text (Contact_Category__c ) = &apos;Subject Matter Experts(SME)&apos; &amp;&amp;  Parent__c == &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Parent__c</errorDisplayField>
        <errorMessage>Parent can&apos;t be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>RowNumber_Not_Null</fullName>
        <active>true</active>
        <description>Row Number not null.</description>
        <errorConditionFormula>( $RecordType.Name =&apos;News&apos; &amp;&amp; text (Row_Number__c)  = &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Row_Number__c</errorDisplayField>
        <errorMessage>Row Number can not  be empty.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Status_not_null_News</fullName>
        <active>true</active>
        <errorConditionFormula>text ( Status__c )=&apos;&apos;</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Please Select the Status.</errorMessage>
    </validationRules>
</CustomObject>